--- a/src/asset/generic.scss
+++ b/src/asset/generic.scss
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: black;
+    background-color: $backgourndColorPrincipal;
     position: relative;
     z-index: -1;
 }
@@ -23,7 +23,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     z-index: 2;
 }
