--- a/src/component/cardUser/CardUser.scss
+++ b/src/component/cardUser/CardUser.scss
@@ -14,6 +14,19 @@
             font-family: $font-primary;
         }
     }
+    .management-profil{
+        a{
+            &:hover svg{
+                fill:$pink
+            }
+            margin-left: 10px;
+            svg{
+                width: 30px;
+                height: 30px;
+                fill:$white;
+            }
+        }
+    }
 
     &:hover{
         box-shadow: 0px 0px 30px $pink;
