--- a/src/asset/variable.scss
+++ b/src/asset/variable.scss
@@ -7,8 +7,8 @@
     src: url(../asset/font/Roboto-Light.ttf);
 }
 
-$font-primary: rock-salt;
-$font-secondary: roboto;
+$font-rock: rock-salt;
+$font-roboto: roboto;
 
 $white: white;
 $pink:#F01BAC;
