--- a/src/asset/variable.scss
+++ b/src/asset/variable.scss
@@ -6,11 +6,36 @@
     font-family: roboto;
     src: url(../asset/font/Roboto-Light.ttf);
 }
+@font-face {
+    font-family: axis;;
+    src: url(../asset/font/Axis.otf);
+}
 
 $font-rock: rock-salt;
 $font-roboto: roboto;
+$font-axis: axis;
 
 $white: white;
 $pink:#F01BAC;
-$backgourndColorPrincipal: rgb(10,13,29)
+$backgourndColorPrincipal: rgb(10,13,29);
 
+@mixin cross{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 30px 30px 0 0;
+    cursor: pointer;    
+    li{
+        &:nth-child(1){
+            transform: rotateZ(45deg);
+        }
+        &:nth-child(2){
+            transform: rotateZ(-45deg)  translate(1px, -1px);
+        }
+        border-bottom: 2px solid $white;
+        width: 100%;
+    }
+    
+}
