--- a/src/component/cardUser/CardUser.scss
+++ b/src/component/cardUser/CardUser.scss
@@ -43,3 +43,21 @@
     color:$pink;
 }
 
+.search-barre{
+    width: 50%;
+    margin: 0 auto;
+    input{
+        width: 100%;
+        height: 30px;
+        border: solid 2px $white;
+        background-color: rgba(10,13,29, 0.7);
+        color: $white;
+        font-family: $font-roboto;
+        font-size: 1.5rem;
+        padding: 10px;
+        &:focus{
+            outline: none;
+        }
+    }
+}
+
