ajout de la suppression des utilisateurs

--- a/src/component/cardUser/CardUser.scss
+++ b/src/component/cardUser/CardUser.scss
@@ -16,7 +16,7 @@
         }
     }
     .management-profil{
-        a{
+        div{
             &:hover svg{
                 fill:$pink
             }
