--- a/src/component/detailUser/detailUser.scss
+++ b/src/component/detailUser/detailUser.scss
@@ -40,6 +40,20 @@
 .container-identity-game{
     width: 90%;
     margin: 0 auto;
+    div{
+        margin-top: 20px;
+        &:hover svg{
+            fill:$pink
+            
+        }
+        margin-left: 10px;
+        svg{
+            width: 30px;
+            height: 30px;
+            fill:$white;
+            cursor: pointer;
+        }
+    }
 }
 
 .identity-game{
