--- a/src/component/cardUser/CardUser.scss
+++ b/src/component/cardUser/CardUser.scss
@@ -1,4 +1,4 @@
-@import '../../asset/generic';
+@import '../../asset/_generic';
 
 .card-user{
     border: solid 2px $white;
@@ -37,27 +37,11 @@
     }
 }
 
-.title-player{
-    font-family: $font-rock;
-    font-size: 3rem;
-    color:$pink;
-}
-
 .search-barre{
     width: 50%;
     margin: 0 auto;
     input{
-        width: 100%;
-        height: 30px;
-        border: solid 2px $white;
-        background-color: rgba(10,13,29, 0.7);
-        color: $white;
-        font-family: $font-roboto;
-        font-size: 1.5rem;
-        padding: 10px;
-        &:focus{
-            outline: none;
-        }
+        @include input(100%, 50px, 10px);
     }
 }
 
