--- a/src/component/detailUser/detailUser.scss
+++ b/src/component/detailUser/detailUser.scss
@@ -1,22 +1,13 @@
 @import '../../asset/_generic';
 
 .container-detail-user{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 0; //70%
-    height: 0; //70vh
-    overflow: hidden;
-    background-color: $backgourndColorPrincipal;
-    border: 1px solid $white;
-    box-shadow: 3px 0px 30px $pink;
+    @include backgroundCard;
 }
 
 .modal-open{
     width: 70%;
     height: 70vh;
-    z-index: 20;
+    z-index: 4;
 }
 
 .picture-profil{
