--- a/src/component/formUser/formUser.scss
+++ b/src/component/formUser/formUser.scss
@@ -26,11 +26,22 @@
         font-size: 1.5rem;
         cursor: pointer;
         transition: ease 0.2s all;
+        margin-bottom: 35px;
         &:hover{
             background-color: $white;
             color: $pink;
             border: solid 2px $pink;
         }
+    }
+    select{
+        @include input(100%, 50px, 0px);
+        background-color: $backgourndColorPrincipal;
+        color: $white;
+        font-family: $font-axis;
+        font-size: 1.5rem;
+        cursor: pointer;
+        transition: ease 0.2s all;
+        margin-top: 35px;
     }
     label{
         display: block;
