ajout du margin bottom du composant detail player

--- a/src/component/detailUser/detailUser.scss
+++ b/src/component/detailUser/detailUser.scss
@@ -30,6 +30,7 @@
 .container-identity-game{
     width: 90%;
     margin: 0 auto;
+    margin-bottom: 35px;
     div{
         margin-top: 20px;
         &:hover svg{
