ajout d'un effet sur les input et sur le bouton valider de la creation des users

--- a/src/asset/_generic.scss
+++ b/src/asset/_generic.scss
@@ -8,8 +8,7 @@
 }
 
 body{
-    background: rgb(135,22,99);
-    background: linear-gradient(90deg, rgba(135,22,99,1) 0%, rgba(40,5,33,1) 1%, rgba(0,0,0,1) 50%, rgba(40,5,33,1) 99%, rgba(135,22,99,1) 100%);
+    background: $backgourndColorPrincipal;
     position: relative;
     z-index: -1;
 }
@@ -81,9 +80,13 @@ p{
 }
 
 h1{
-    font-family: $font-rock;
     font-size: 3rem;
-    color:$pink;
+    color:$white;
+    font-size: 5rem;
+    letter-spacing: 5px;
+    margin-bottom: 0;
+    text-shadow: 0 0 2px $white, 0 0 10px $white, 0 0 50px $white;
+    font-family: $font-axis;
 }
     
 .img-fluid{
@@ -97,4 +100,227 @@ h1{
 
 .container-input{
     position: relative; 
+}
+
+label{
+    display: block;
+    text-align: center;
+    font-family: $font-axis;
+    margin: 20px 0px 5px 0px;
+    font-size: 1.5rem;
+}
+
+select{
+    @include input(100%, 50px, 0px);
+    background-color: $backgourndColorPrincipal;
+    color: $white;
+    font-family: $font-axis;
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: ease 0.2s all;
+    margin-top: 35px;
+}
+
+.glowing-btn {
+    display: block;
+    width: 60%;
+    margin: 20px auto;
+    position: relative;
+    cursor: pointer;
+    padding: 0.35em 1em;
+    border: 0.15em solid $white;
+    border-radius: 0.45em;
+    background: $backgourndColorPrincipal;
+    perspective: 2em;
+    font-size: 2em;
+    font-weight: 900;
+    letter-spacing: 1em;
+    box-shadow: inset 0px 0px 0.5em 0px $white,
+        0px 0px 0.5em 0px $white;
+}
+
+.glowing-txt {
+  color: $white;
+  margin-right: -0.8em;
+  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em $white;
+  animation: text-flicker 3s linear infinite;
+}
+
+.faulty-letter {
+  opacity: 0.5;
+  animation: faulty-flicker 2s linear infinite;
+  color: $white;
+}
+
+.glowing-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.7;
+  filter: blur(1em);
+  transform: translateY(120%) rotateX(95deg) scale(1, 0.35);
+  background: $white;
+  pointer-events: none;
+}
+
+.glowing-btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  z-index: -1;
+  background-color: $pink;
+  box-shadow: 0 0 2em 0.2em $pink;
+  transition: opacity 100ms linear;
+}
+
+.glowing-btn:hover {
+  text-shadow: none;
+  animation: none;
+  border: 0.15em solid $pink;
+
+}
+
+.glowing-btn:hover .glowing-txt {
+  animation: none;
+}
+
+.glowing-btn:hover .faulty-letter {
+  animation: none;
+  text-shadow: none;
+  opacity: 1;
+}
+
+.glowing-btn:hover:before {
+  filter: blur(1.5em);
+  opacity: 1;
+  background: $pink;
+
+
+}
+
+.glowing-btn:hover:after {
+  opacity: 1;
+}
+
+@keyframes faulty-flicker {
+  0% {
+    opacity: 0.1;
+  }
+  2% {
+    opacity: 0.1;
+  }
+  4% {
+    opacity: 0.5;
+  }
+  19% {
+    opacity: 0.5;
+  }
+  21% {
+    opacity: 0.1;
+  }
+  23% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0.5;
+  }
+  83% {
+    opacity: 0.4;
+  }
+
+  87% {
+    opacity: 1;
+  }
+}
+
+@keyframes text-flicker {
+  0% {
+    opacity: 0.1;
+  }
+
+  2% {
+    opacity: 1;
+  }
+
+  8% {
+    opacity: 0.1;
+  }
+
+  9% {
+    opacity: 1;
+  }
+
+  12% {
+    opacity: 0.1;
+  }
+  20% {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.3;
+  }
+  30% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 0.7;
+  }
+  72% {
+    opacity: 0.2;
+  }
+
+  77% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0.9;
+  }
+}
+
+@keyframes border-flicker {
+  0% {
+    opacity: 0.1;
+  }
+  2% {
+    opacity: 1;
+  }
+  4% {
+    opacity: 0.1;
+  }
+
+  8% {
+    opacity: 1;
+  }
+  70% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .glowing-btn{
+    font-size: 1em;
+  }
+}
+
+@keyframes slide-right-to-left {
+    0% {
+        left: 0px;
+    }
+    50% {
+        left: 100%;
+    }
+    100% {
+        left: 0px;
+    }
 }
