--- a/src/asset/_variable.scss
+++ b/src/asset/_variable.scss
@@ -51,9 +51,33 @@ $backgourndColorPrincipal: rgb(10,13,29);
         padding: $padding;
         &:focus{
             outline: none;
-            border: solid 2px $pink;
+            border: solid 2px $white;
+            box-shadow:
+            inset 0 0 20px rgba(245, 245, 245, 0.427),
+            0 0 20px #fff,
+            -2px 0 10px #fff,
+            2px 0 10px #fff;
         }
       
+}
+
+@mixin inputSubmit{
+    @include input(50%, 60px, 0px);
+    display: block;
+    margin: 0 auto;
+    margin-top: 20px;
+    background-color: $pink;
+    color: $white;
+    font-family: $font-rock;
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: ease 0.2s all;
+    margin-bottom: 35px;
+    &:hover{
+        background-color: $white;
+        color: $pink;
+        border: solid 2px $pink;
+    }
 }
 
 @mixin backgroundCard{
@@ -65,7 +89,7 @@ $backgourndColorPrincipal: rgb(10,13,29);
     overflow: hidden;
     background-color: $backgourndColorPrincipal;
     border: 1px solid $white;
-    box-shadow: 3px 0px 30px $pink;
+    box-shadow: 3px 0px 30px $white;
 }
 
 @mixin effectInput{
@@ -77,22 +101,18 @@ $backgourndColorPrincipal: rgb(10,13,29);
         height: 3px;
         border-radius: 50%;
         z-index: 22;
-        border: solid 1px $pink;
+        border: solid 1px $white;
         transition: ease 0.2s all;
-        background-color: rgb(255, 27, 172);
+        background-color: $white;
         transform: translate(-50%, -50%);
         animation: slide-right-to-left 5s linear infinite;
-        box-shadow: 0 0 10px #ff00c8, 0 0 20px #ff00c8, 0 0 30px #ff00c8, 0 0 40px #ff00c8, 0 0 50px #ff00c8, 0 0 60px #ff00c8, 0 0 70px #ff00c8;
+        box-shadow: 0 0 10px $white, 0 0 20px $white, 0 0 30px $white, 0 0 40px $white, 0 0 50px $white, 0 0 60px $white, 0 0 70px $white;
 }
 
-@keyframes slide-right-to-left {
-    0% {
-        left: 0px;
-    }
-    50% {
-        left: 100%;
-    }
-    100% {
-        left: 0px;
-    }
-  }
+
+
+
+
+
+
+
