--- a/src/component/formUser/formUser.scss
+++ b/src/component/formUser/formUser.scss
@@ -9,46 +9,10 @@
     .container-input{
         input{
             @include input(100%, 50px, 0px);
-            &:focus{
-                border: solid 2px $pink;
-            }   
         }
-}
-
+    }
     input[type="submit"]{
-        @include input(50%, 60px, 0px);
-        display: block;
-        margin: 0 auto;
-        margin-top: 20px;
-        background-color: $pink;
-        color: $white;
-        font-family: $font-rock;
-        font-size: 1.5rem;
-        cursor: pointer;
-        transition: ease 0.2s all;
-        margin-bottom: 35px;
-        &:hover{
-            background-color: $white;
-            color: $pink;
-            border: solid 2px $pink;
-        }
-    }
-    select{
-        @include input(100%, 50px, 0px);
-        background-color: $backgourndColorPrincipal;
-        color: $white;
-        font-family: $font-axis;
-        font-size: 1.5rem;
-        cursor: pointer;
-        transition: ease 0.2s all;
-        margin-top: 35px;
-    }
-    label{
-        display: block;
-        text-align: center;
-        font-family: $font-axis;
-        margin: 20px 0px 5px 0px;
-        font-size: 1.5rem;
+        @include inputSubmit;
     }
     p{
         font-family: $font-axis;
@@ -57,6 +21,7 @@
         text-align: center;
         background-color: rgba(10,13,29, 0.7);
         font-family: 'Roboto', sans-serif;
+        padding-top: 5px;
     }
 }
 
