ajout des coach dans la page de gestion des users

--- a/src/component/cardUser/CardUser.scss
+++ b/src/component/cardUser/CardUser.scss
@@ -52,3 +52,15 @@
     }
 }
 
+.list-type-user{
+    width: 20%;
+    margin: 0 auto;
+    li{
+        font-size: 1.5rem;
+        margin-left: 10px;
+        cursor: pointer;
+    }
+    
+    
+}
+
