--- a/src/asset/_variable.scss
+++ b/src/asset/_variable.scss
@@ -7,7 +7,7 @@
     src: url(../asset/font/Roboto-Light.ttf);
 }
 @font-face {
-    font-family: axis;;
+    font-family: axis;
     src: url(../asset/font/Axis.otf);
 }
 
